libs/eszip/snapshots/eszip__v2__tests__file_format_roundtrippable.snap
---
source: src/v2.rs
expression: bytes
---
[
    69,
    83,
    90,
    73,
    80,
    50,
    46,
    51,
    0,
    0,
    0,
    4,
    0,
    1,
    1,
    32,
    93,
    165,
    28,
    55,
    117,
    128,
    240,
    183,
    115,
    90,
    129,
    122,
    136,
    28,
    245,
    21,
    233,
    64,
    253,
    55,
    203,
    126,
    13,
    171,
    123,
    185,
    36,
    119,
    36,
    75,
    26,
    21,
    0,
    0,
    0,
    104,
    0,
    0,
    0,
    15,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    29,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    151,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    61,
    0,
    0,
    0,
    22,
    0,
    0,
    0,
    183,
    0,
    0,
    0,
    151,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    97,
    46,
    116,
    115,
    1,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    72,
    28,
    222,
    153,
    19,
    208,
    7,
    135,
    152,
    187,
    213,
    35,
    44,
    124,
    73,
    98,
    68,
    248,
    37,
    203,
    153,
    163,
    243,
    141,
    149,
    244,
    226,
    122,
    96,
    73,
    232,
    144,
    0,
    0,
    0,
    0,
    227,
    176,
    196,
    66,
    152,
    252,
    28,
    20,
    154,
    251,
    244,
    200,
    153,
    111,
    185,
    36,
    39,
    174,
    65,
    228,
    100,
    155,
    147,
    76,
    164,
    149,
    153,
    27,
    120,
    82,
    184,
    85,
    0,
    0,
    0,
    115,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    34,
    59,
    10,
    47,
    43,
    32,
    46,
    117,
    220,
    233,
    51,
    234,
    223,
    154,
    133,
    115,
    170,
    205,
    173,
    253,
    179,
    31,
    174,
    255,
    191,
    245,
    128,
    155,
    184,
    97,
    88,
    208,
    31,
    136,
    210,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    34,
    98,
    34,
    59,
    10,
    195,
    125,
    168,
    132,
    12,
    51,
    241,
    62,
    31,
    13,
    95,
    201,
    65,
    196,
    80,
    30,
    66,
    11,
    109,
    88,
    13,
    143,
    234,
    241,
    249,
    0,
    6,
    233,
    191,
    196,
    22,
    196,
    0,
    0,
    1,
    110,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    92,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    77,
    65,
    65,
    77,
    44,
    77,
    65,
    65,
    77,
    44,
    67,
    65,
    65,
    67,
    44,
    77,
    65,
    65,
    77,
    44,
    67,
    65,
    65,
    81,
    34,
    125,
    217,
    253,
    126,
    48,
    67,
    114,
    34,
    179,
    49,
    61,
    214,
    16,
    190,
    14,
    207,
    9,
    127,
    94,
    228,
    37,
    155,
    212,
    243,
    253,
    179,
    32,
    161,
    74,
    181,
    190,
    243,
    94,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    92,
    34,
    98,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    77,
    65,
    65,
    77,
    44,
    67,
    65,
    65,
    67,
    44,
    75,
    65,
    65,
    75,
    44,
    67,
    65,
    65,
    67,
    44,
    67,
    65,
    65,
    67,
    44,
    71,
    65,
    65,
    71,
    44,
    67,
    65,
    65,
    71,
    34,
    125,
    108,
    118,
    224,
    22,
    49,
    2,
    139,
    84,
    17,
    178,
    219,
    36,
    167,
    159,
    14,
    66,
    118,
    252,
    4,
    108,
    73,
    29,
    44,
    69,
    146,
    142,
    207,
    61,
    11,
    157,
    41,
    9,
]
