libs/eszip/snapshots/eszip__v2__tests__npm_packages.snap
---
source: src/v2.rs
expression: bytes
---
[
    69,
    83,
    90,
    73,
    80,
    50,
    46,
    51,
    0,
    0,
    0,
    4,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    156,
    0,
    0,
    0,
    15,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    29,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    151,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    29,
    0,
    0,
    0,
    22,
    0,
    0,
    0,
    151,
    0,
    0,
    0,
    136,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    97,
    46,
    116,
    115,
    1,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    0,
    0,
    0,
    3,
    100,
    64,
    53,
    2,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    12,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    64,
    94,
    49,
    46,
    50,
    2,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    10,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    64,
    94,
    49,
    2,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    158,
    0,
    0,
    0,
    7,
    97,
    64,
    50,
    46,
    50,
    46,
    51,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    7,
    98,
    64,
    49,
    46,
    50,
    46,
    51,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    18,
    115,
    111,
    109,
    101,
    111,
    116,
    104,
    101,
    114,
    115,
    112,
    101,
    99,
    105,
    102,
    105,
    101,
    114,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    7,
    99,
    64,
    49,
    46,
    49,
    46,
    49,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    7,
    100,
    64,
    53,
    46,
    48,
    46,
    48,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    101,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    7,
    101,
    64,
    54,
    46,
    48,
    46,
    48,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    100,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    13,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    64,
    49,
    46,
    50,
    46,
    50,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    1,
    97,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    98,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    51,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    34,
    59,
    10,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    34,
    98,
    34,
    59,
    10,
    0,
    0,
    1,
    31,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    92,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    79,
    65,
    65,
    79,
    44,
    75,
    65,
    65,
    75,
    44,
    67,
    65,
    65,
    67,
    44,
    77,
    65,
    65,
    77,
    44,
    83,
    65,
    65,
    83,
    34,
    125,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    92,
    34,
    98,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    79,
    65,
    65,
    79,
    44,
    77,
    65,
    65,
    77,
    44,
    73,
    65,
    65,
    73,
    44,
    73,
    65,
    65,
    73,
    34,
    125,
]
