libs/eszip/snapshots/eszip__v2__tests__opaque_data.snap
---
source: src/v2.rs
expression: bytes
---
[
    69,
    83,
    90,
    73,
    80,
    50,
    46,
    51,
    0,
    0,
    0,
    4,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    31,
    0,
    0,
    0,
    9,
    43,
    115,
    47,
    102,
    111,
    111,
    98,
    97,
    114,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    1,
    2,
    3,
    0,
    0,
    0,
    0,
]
